# clReflect

./: .clang-format  .gitignore  .hgignore  AUTHORS  CMakeLists.txt  ClangReflect.sln  LICENSE  MakeRelease.bat  README  README.md  build-osx.sh  build.bat  clReflect.sln  pibfile  visualstudio_debugger_tips.txt
cmake/: clReflect.cmake
doc/: MarkingPrimitivesForReflection.md
inc/clcpp/: Containers.h  Core.h  Database.h  FunctionCall.h  Platform.h  clcpp.h  clcpp_internal.h
inc/clutl/: Containers.h  FieldVisitor.h  JSONLexer.h  Module.h  Object.h  Objects.h  Serialise.h  SerialiseFunction.h  SerialiseVersionedBinary.h
inc/crcpp/: Core.h  Database.h  crcpp.h
release/: LICENSE  README  README.md
release/inc/clcpp/: Containers.h  Core.h  Database.h  FunctionCall.h  clcpp.h  clcpp_internal.h
release/inc/clutl/: Module.h  Objects.h  Serialise.h  SerialiseFunction.h
release/src/: Core.cpp  Database.cpp  DatabaseLoader.cpp  DatabaseLoader.h
release/src/clReflectCpp/: Containers.cpp  Core.cpp  Database.cpp  DatabaseLoader.cpp  DatabaseLoader.h  clcpp.cpp
release/src/clReflectUtil/: FieldVisitor.cpp  Module.cpp  Objects.cpp  Serialise.cpp  SerialiseJSON.cpp  SerialiseVersionedBinary.cpp
src/: CMakeLists.txt
src/ClangReflectCore/: Arguments.h  ClangReflectCore.vcproj  Database.cpp  Database.h  DatabaseBinarySerialiser.cpp  DatabaseMetadata.cpp  DatabaseTextSerialiser.cpp  FileUtils.cpp  FileUtils.h  Logging.cpp  Logging.h
src/ClangReflectCpp/: ClangReflectCpp.vcproj  Database.cpp  DatabaseLoader.cpp  DatabaseLoader.h
src/ClangReflectExport/: ClangReflectExport.vcproj  CppExport.cpp  CppExport.h  Main.cpp  MapFileParser.cpp  MapFileParser.h  PtrRelocator.cpp  PtrRelocator.h  StackAllocator.h
src/ClangReflectMerge/: ClangReflectMerge.vcproj  DatabaseMerge.cpp  Main.cpp
src/ClangReflectScan/: ASTConsumer.cpp  ASTConsumer.h  Arguments.h  AttributeParser.cpp  AttributeParser.h  ClangFrontend.cpp  ClangFrontend.h  ClangReflectScan.cpp  ClangReflectScan.h  ClangReflectScan.vcproj  Database.cpp  Database.h  DatabaseBinarySerialiser.cpp  DatabaseBinarySerialiser.h  DatabaseMetadata.cpp  DatabaseMetadata.h  DatabaseTextSerialiser.cpp  DatabaseTextSerialiser.h  Logging.cpp  Logging.h  Main.cpp  ReflectionSpecs.cpp  ReflectionSpecs.h
src/ClangReflectTest/: ClangReflectTest.vcproj  Main.cpp  Test.cpp  TestAttributes.cpp  TestClassImpl.cpp  TestReflectionSpecs.cpp  TestTemplates.cpp  crcpp.h
src/clReflectCore/: Arguments.h  Array.h  CMakeLists.txt  Database.cpp  Database.h  DatabaseBinarySerialiser.cpp  DatabaseBinarySerialiser.h  DatabaseMetadata.cpp  DatabaseMetadata.h  DatabaseTextSerialiser.cpp  DatabaseTextSerialiser.h  FileUtils.cpp  FileUtils.h  Logging.cpp  Logging.h  clReflectCore.pibfile  clReflectCore.vcproj
src/clReflectCpp/: CMakeLists.txt  ClangReflectCpp.vcproj  Containers.cpp  Core.cpp  Database.cpp  DatabaseLoader.cpp  DatabaseLoader.h  clReflectCpp.pibfile  clReflectCpp.vcproj  clcpp.cpp
src/clReflectExport/: CMakeLists.txt  ClangReflectExport.vcproj  CppExport.cpp  CppExport.h  Main.cpp  MapFileParser.cpp  MapFileParser.h  PtrRelocator.cpp  PtrRelocator.h  StackAllocator.h  clReflectExport.pibfile  clReflectExport.vcproj
src/clReflectMerge/: CMakeLists.txt  CodeGen.cpp  CodeGen.h  DatabaseMerge.cpp  DatabaseMerge.h  Main.cpp  clReflectMerge.pibfile  clReflectMerge.vcproj
src/clReflectScan/: ASTConsumer.cpp  ASTConsumer.h  AttributeParser.cpp  AttributeParser.h  CMakeLists.txt  ClangFrontend.cpp  ClangFrontend.h  ClangReflectScan.vcproj  Main.cpp  ReflectionSpecs.cpp  ReflectionSpecs.h  clReflectScan.pibfile  clReflectScan.vcproj
src/clReflectTest/: CMakeLists.txt  Main.cpp  Test.cpp  TestArrays.cpp  TestAttributes.cpp  TestClassImpl.cpp  TestCollections.cpp  TestConstexprGetType.cpp  TestFunctionSerialise.cpp  TestOffsets.cpp  TestReflectionSpecs.cpp  TestSerialise.cpp  TestSerialiseJSON.cpp  TestTemplates.cpp  TestTypedefs.cpp  clReflectTest.pibfile  clReflectTest.vcproj  clcppcodegen.cpp  clcppcodegen.h
src/clReflectUtil/: CMakeLists.txt  Containers.cpp  FieldVisitor.cpp  JSONLexer.cpp  Module.cpp  Objects.cpp  Platform.cpp  Platform.h  Serialise.cpp  SerialiseFunction.cpp  SerialiseJSON.cpp  SerialiseVersionedBinary.cpp  clReflectUtil.pibfile  clReflectUtil.vcproj
test/: Test.cpp
